--- a/mnstock/tbls/CMakeLists.txt
+++ b/mnstock/tbls/CMakeLists.txt
@@ -1,9 +1,8 @@
 add_library(tbls
-        tbluser/tbluser.h
-        tbluser/tbluser.c
+        tbluser/tblusers.h
+        tbluser/tblusers.c
         tblgroup/tblgroup.h
-        tblgroup/tblgroup.c
-        )
+        tblgroup/tblgroup.c)
 target_include_directories(tbls PUBLIC ./ ./tbluser)
 target_link_libraries(tbls  mnlibrary )
 target_link_libraries(tbls  mndb )
