--- a/mnstock/tbls/CMakeLists.txt
+++ b/mnstock/tbls/CMakeLists.txt
@@ -2,7 +2,8 @@ add_library(tbls
         tbluser/tblusers.h
         tbluser/tblusers.c
         tblgroup/tblgroup.h
-        tblgroup/tblgroup.c)
+        tblgroup/tblgroup.c tbluser/tbluser_modal.c tbluser/tbluser_modal.h)
 target_include_directories(tbls PUBLIC ./ ./tbluser)
 target_link_libraries(tbls  mnlibrary )
 target_link_libraries(tbls  mndb )
+target_link_libraries(tbls  cqt )
